--- a/views/index.html
+++ b/views/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<title>Happy Birthday Zanetaaaa!!!!!!!!L</title>
+		<title>Happy Birthday Zanetaaaa!!!!!!!!</title>
 		<link rel="stylesheet" href="/public/style.css">
 	</head>
 	<body>
-		<h1>Hello, HTML.</h1>
+		<h1>Happy Birthday Zanetaaaa!!!!!!!!</h1>
 		<p>Do not use until Challenge #12</p>
      <form action="/name" method="post">
       <label>First Name :</label>
